CSS/main.css
/* ... */
@media (prefers-color-scheme: dark) {
	:root {
		--background-color: black;
		--on-background-color: #EFEFEF;
		--surface-color: black;
		--on-surface-color: #EFEFEF;
		--surface-overlay-color: white;
	}
}
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}
html {
	scroll-behavior: smooth;
}
body {
	position: relative;
	display: flex;
	flex-direction: column;
	align-items: stretch;
	min-height: 100vh;
	background-color: var(--background-color);
	font-family: var(--default-font-family);
	color: var(--on-background-color);
	-webkit-text-size-adjust: 100%;
}
.surface {
	box-shadow: var(--box-shadow);
	background-color: var(--surface-color);
}
@media (prefers-color-scheme: dark) {
	.surface {
		position: relative;
		box-shadow: none;
	}
	.surface::before {
		content: "";
		position: absolute;
		top: 0;
		left: 0;
		border-radius: inherit;
		width: 100%;
		height: 100%;
		background-color: var(--surface-overlay-color);
		pointer-events: none;
	}
}

/* Header and Footer */

header, footer {
	display: flex;
	align-items: center;
	padding: 1em;
	padding-left: max(1em, env(safe-area-inset-left));
	padding-right: max(1em, env(safe-area-inset-right));
}

/* Header */

header {
	position: sticky;
	z-index: 1;
	top: 0;
	box-shadow: 0em -0.35em 1em 0em var(--primary-box-shadow-color);
	height: calc(4em + env(safe-area-inset-top));
	padding-top: env(safe-area-inset-top);
	padding-bottom: 0em;
	background-color: var(--background-color);
}
@media (prefers-color-scheme: dark) {
	header {
		--primary-box-shadow-color: var(--primary-color);
	}
}

/* -- Nav */

.headerLogo {
	margin-right: auto;
	font-size: 1.5em;
	font-weight: bold;
}
nav {
	--gap: 1.5em;
	z-index: 1;
	display: flex;
	align-items: center;
	gap: var(--gap);
}
.navLink {
	position: relative;
	text-decoration: none;
}
.navLink:not(.navLink--contact):not(.navLink--current),
.navLink:not(.navLink--contact):not(.navLink--current):visited {
	color: var(--on-background-color);
}
.navLink--standard {
	opacity: 0.6;
}
.navLink--standard::after {
	content: "";
	position: absolute;
	top: 100%;
	left: 0%;
	margin-top: var(--border-thickness);
	width: 100%;
	height: var(--border-thickness);
	background-color: var(--primary-color);
}
.navLink--standard:not(.navLink--current)::after {
	transform: scaleX(0);
	transition-duration: var(--transition-duration);
}
.navLink--standard:not(.navLink--current):hover::after {
	transform: scaleX(1);
}
.navLink--current, .navLink--current:visited {
	opacity: 1;
	color: var(--primary-color)
}
.navLink--contact {
	font-size: 1.1em;
}
#navToggleInput {
	display: none;
}
@media (max-width: 792px) {
	#navToggleInput:not(:checked) ~ nav {
		display: none;
	}
	nav {
		--gap: 2em;
		position: fixed;
		top: 0;
		left: 0;
		flex-direction: column;
		width: 100vw;
		height: 100vh;
		padding: var(--gap);
		background-color: var(--background-color);
		font-size: 1.5em;
	}
	.navToggle {
		--gap: 0.4em;
		z-index: 2;
		display: flex;
		flex-direction: column;
		justify-content: space-between;
		align-items: stretch;
		gap: var(--gap);
		width: calc(var(--gap) * 5);
		height: calc(var(--gap) * 5);
		cursor: pointer;
	}
	.navToggle_line {
		transform-origin: center center;
		border-radius: var(--border-radius);
		height: var(--gap);
		background-color: var(--primary-color);
	}
	#navToggleInput:checked ~ .navToggle .navToggle_line:first-child {
		transform: translateY(calc(var(--gap) * 2)) rotate(45deg);
	}
	#navToggleInput:checked ~ .navToggle .navToggle_line:nth-child(2) {
		opacity: 0;
	}
	#navToggleInput:checked ~ .navToggle .navToggle_line:last-child {
		transform: translateY(calc(var(--gap) * -2)) rotate(-45deg);
	}
}

/* Footer */

footer {
	gap: 1em;
	justify-content: space-between;
	padding-bottom: max(1em, env(safe-area-inset-bottom));
	background-color: var(--on-background-color);
	color: var(--background-color);
}
footer > span {
	font-size: 0.8em;
}
footer > span:last-child {
	text-align: center;
}

/* Modal */

.modal {
	position: fixed;
	flex-grow: 1;
	z-index: 10;
	display: grid;
	place-items: center;
	width: 100vw;
	height: 100vh;
}
.modal__overlay {
	position: absolute;
	z-index: -1;
	opacity: 0.4;
	width: 100%;
	height: 100%;
	background-color: black;
	pointer-events: none;
}
.modal__box {
	max-width: 500px;
	min-width: 300px;
	max-height: 90vh;
}
.modal__box::before {
	opacity: 0.16;
}
.modal__box > * {
	z-index: 1;
}
#modal__box {
	--gap: 1em;
	display: flex;
	flex-direction: column;
	align-items: stretch;
	gap: var(--gap);
	border-radius: var(--border-radius);
	width: 80vw;
	padding: var(--gap);
}
#modal__icon {
	display: grid;
	place-items: center;
	font-size: 5em;
}
#modal__icon.fa-info-circle, #modal__icon.fa-question-circle {
	color: var(--primary-color)
}
#modal__icon.fa-check-circle {
	color: var(--success-color);
}
#modal__icon.fa-exclamation-triangle {
	color: var(--warning-color);
}
#modal__icon.fa-times-circle {
	color: var(--danger-color);
}
#modal__heading {
	font-size: 2em;
	font-weight: var(--default-font-weight);
	text-align: center;
}
#modal__message {
	overflow: auto;
	font-weight: var(--default-font-weight);
}
#modal__message p {
	margin-left: 0em;
}
#modal__buttonContainer {
	display: flex;
	justify-content: flex-end;
	gap: var(--gap);
}
.modal__button {
	font-size: 0.9em;
}
@media (prefers-color-scheme: dark) {
	#modal__heading, #modal__message {
		font-weight: var(--thin-font-weight);
	}
}

/* Main */

main {
	flex-grow: 1;
}
section {
	width: 100%;
	padding: var(--section-default-padding-vertical) var(--section-default-padding-horizontal);
	font-weight: var(--default-font-weight);
}
h2 {
	font-size: 1.75em;
}
h3 {
	font-size: 1.45em;
}
h4 {
	font-size: 1.25em;
}
h5 {
	font-size: 1.1em;
}
p {
	margin-left: auto;
	margin-right: auto;
	max-width: var(--paragraph-max-width);
	line-height: 1.3em;
}
:is(p, ul) + p {
	margin-top: 0.7em;
}
:is(p, ul) + ul {
	margin-top: 0.4em;
}
a {
	word-break: break-word;
	color: dodgerblue;
}
a:visited {
	color: orchid;
}
/* ... */

